<resources>
    <string name="app_name">Android Exam</string>
    <string name="fName">First Name</string>
    <string name="lName">Last Name</string>
    <string name="email">Email</string>
    <string name="bDay">Birthday: </string>
    <string name="mobile">Mobile Number: </string>
    <string name="address">Address</string>
    <string name="age">Age </string>
    <string name="contact_person">Contact Person: </string>
    <string name="contact_person_number">Contact Person Number: </string>
    <string name="personLabel">PERSON INFORMATION CARD</string>

</resources>