<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailsActivity"
    android:background="@color/darkGray"
    android:padding="10dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/card"
        android:text="@string/personLabel"
        android:textColor="@color/yellow"
        android:layout_marginBottom="20dp"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <TextView
                android:id="@+id/tvFName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fName"
                android:textColor="@color/darkGray"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/tvLName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/darkGray"
                android:textSize="20sp"
                android:textStyle="bold"
                android:text="@string/lName"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@id/tvFName"
                />

            <TextView
                android:id="@+id/tvComma"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_marginStart="2dp"
                android:textColor="@color/darkGray"
                android:textSize="20sp"
                android:textStyle="bold"
                android:text=","
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@id/tvLName"/>

            <TextView
                android:id="@+id/tvAge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/darkGray"
                android:textSize="20sp"
                android:textStyle="bold"
                android:text="@string/age"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@id/tvComma"/>

            <TextView
                android:id="@+id/tvEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/darkGray"
                android:textSize="15sp"
                android:text="@string/email"
                android:layout_marginTop="5dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvFName"/>

            <TextView
                android:id="@+id/tvAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/darkGray"
                android:textSize="15sp"
                android:text="@string/address"
                android:layout_marginTop="5dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvEmail"/>

            <View
                android:id="@+id/separator"
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:layout_marginTop="10dp"
                android:background="@color/brown"
                app:layout_constraintTop_toBottomOf="@id/tvAddress"/>

            <TextView
                android:id="@+id/tvMobileLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/darkGray"
                android:textSize="15sp"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:text="@string/mobile"
                app:layout_constraintTop_toBottomOf="@id/separator"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/tvMobile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/darkGray"
                android:textSize="15sp"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@id/separator"
                app:layout_constraintStart_toEndOf="@id/tvMobileLabel"/>

            <TextView
                android:id="@+id/tvBirthdayLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/darkGray"
                android:textSize="15sp"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:text="@string/bDay"
                app:layout_constraintTop_toBottomOf="@id/tvMobileLabel"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/tvBday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/darkGray"
                android:textSize="15sp"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@id/tvMobile"
                app:layout_constraintStart_toEndOf="@id/tvBirthdayLabel"/>

            <TextView
                android:id="@+id/tvContactPLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/darkGray"
                android:textSize="15sp"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:text="@string/contact_person"
                app:layout_constraintTop_toBottomOf="@id/tvBirthdayLabel"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/tvContactP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/darkGray"
                android:textSize="15sp"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@id/tvBday"
                app:layout_constraintStart_toEndOf="@id/tvContactPLabel"/>

            <TextView
                android:id="@+id/tvContactPNumLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/darkGray"
                android:textSize="15sp"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:text="@string/contact_person_number"
                app:layout_constraintTop_toBottomOf="@id/tvContactPLabel"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/tvContactPNum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/darkGray"
                android:textSize="15sp"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@id/tvContactP"
                app:layout_constraintStart_toEndOf="@id/tvContactPNumLabel"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>



</androidx.constraintlayout.widget.ConstraintLayout>